# GLBrowser

./: .gitignore  CMakeLists.txt  README.md  install.sh
data/: .gitignore  build.cmd  convert_font.py  font_data.cpp  font_tex.c  graphics_cs.txt
src/: app.cpp  app.h  dirview.cpp  dirview.h  event.h  file_assoc.cpp  file_assoc.h  font_data.h  geometry.cpp  geometry.h  glad.c  glad.h  main.cpp  menu.cpp  menu.h  renderer.cpp  renderer.h  sysutil.cpp  sysutil.h
